# uber_scrounch_backend

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  shell.nix
.github/workflows/: docker-build.yml  push.yml  release.yml  release_binary.yml  rust.yml
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
seed/dev/: up.sql
seed/dev/00000000000001_dev/: down.sql  up.sql
seed/prod/00000000000001_prod/: up.sql
src/: main.rs  migration.rs  schema.rs  state.rs
src/api/: get.rs  mod.rs
src/models/: command_model.rs  command_products_model.rs  delivery_model.rs  location_model.rs  mod.rs  product_model.rs  user_model.rs
src/routes/: command.rs  delivery.rs  location.rs  mod.rs  product.rs  user.rs
src/routes/oauth/: admin.rs  login.rs  microsoft.rs  mod.rs  user.rs
src/routes/request/: command_request.rs  delivery_request.rs  mod.rs
src/routes/response/: command_response.rs  delivery_response.rs  location_response.rs  mod.rs  product_response.rs  user_response.rs
